--- a/chrome/taskmail/locale/en-US/taskmail-overlay.properties
+++ b/chrome/taskmail/locale/en-US/taskmail-overlay.properties
@@ -1,8 +1,23 @@
 confirmDeleteLink=OK to delete links ?
 taskDeleteConfirm=OK to delete tasks ?
 moveLinkAlert=Tasks with link move not supported.
-moveMailAlert=Mail move problem. One mail has lost its linked tasks. It's possible to undo.
-LinkAlertTooManyMail=Link impossible : too many emails selected (one email to many tasks is possible). 
-LinkAlertTooManyTask=Link impossible : too many tasks selected (one task to many emails is possible).
-LinkAlertSubfolder=Liaison impossible : one of selected tasks is in a sub folder.
-SelectMailLinkAlertSubfolder=Selection impossible : one of selected tasks is in a sub folder.
+moveMailAlert=Message move problem. One message has lost its linked tasks. It's possible to undo.
+LinkAlertTooManyMail=Link impossible : too many messages selected (one message to many tasks is possible). 
+LinkAlertTooManyTask=Link impossible : too many tasks selected (one task to many messages is possible).
+LinkAlertTooManyObjects=Link impossible : too many tasks or messages selected (1 task to N messages or 1 message to N tasks).
+LinkAlertSubfolder=Liaison impossible : one of selected tasks is outside the current folder.
+SelectMailLinkAlertSubfolder=Selection impossible : one of selected tasks is outside the current folder.
+statusbar.text.indice=Links : ( %S / %S ) + %S 
+statusbar.text.nolink=No links
+statusbar.text.empty=Links
+extensions.taskmail.states=0|info,1|to do,2|to follow,3|waiting,4|done
+taskmail.allStates=Any
+menuSelectLinkedTaskMail=Select linked tasks or messages
+menuSelectLinkedTask=Select linked tasks
+menuSelectLinkedMail=Select linked messages
+menuGoNextTaskMail=Go to next task or message
+menuGoNextTask=Go to next task
+menuGoNextMail=Go to next message
+reportState=State
+reportPriority=Priority
+docUrl=http://tasksandmails.mozdev.org/manuel_en.html
