--- a/chrome/taskmail/locale/fr-FR/taskmail-overlay.properties
+++ b/chrome/taskmail/locale/fr-FR/taskmail-overlay.properties
@@ -1,8 +1,23 @@
 confirmDeleteLink=Confirmez-vous la suppression du(des) lien(s) ?
-taskDeleteConfirm=Confimez-vous la suppression de la(des) tâche(s) ?
-moveLinkAlert=Déplacement de tache avec lien non gérer.
-moveMailAlert=Déplacement de message problématique. Il existe un email qui a perdu une tache. Il est possible d'annuler la dernière opération.
-LinkAlertTooManyMail=Liaison impossible : trop d'emails sélectionnés (1 mail avec n tâches est possible). 
-LinkAlertTooManyTask=Liaison impossible : trop de tâches sélectionnées (1 tâche avec n emails est possible).
-LinkAlertSubfolder=Liaison impossible : une des tâches sélectionnées est dans un sous folder.
-SelectMailLinkAlertSubfolder=Selection impossible : une des tâches sélectionnées est dans un sous folder.
+taskDeleteConfirm=Confirmez-vous la suppression de la(des) tâche(s) ?
+moveLinkAlert=Déplacement de tâche avec lien non gérer.
+moveMailAlert=Déplacement de message problématique. Il existe un message qui a perdu une tâche. Il est possible d'annuler la dernière opération.
+LinkAlertTooManyMail=Liaison impossible : trop de messages sélectionnés (un message avec n tâches est possible). 
+LinkAlertTooManyTask=Liaison impossible : trop de tâches sélectionnées (un tâche avec n messages est possible).
+LinkAlertTooManyObjects=Liaison impossible : trop de tâches ou de messages sélectionnées (un tâche à n messages ou un message à N tâches).
+LinkAlertSubfolder=Liaison impossible : une des tâches sélectionnées n'est pas dans le folder courant.
+SelectMailLinkAlertSubfolder=Sélection impossible : une des tâches sélectionnées n'est pas dans le folder courant.
+statusbar.text.indice=Liens : ( %S / %S ) + %S 
+statusbar.text.nolink=Pas de liens
+statusbar.text.empty=Liens
+extensions.taskmail.states=0|info,1|à faire,2|à suivre,3|attente,4|fait
+taskmail.allStates=Tous
+menuSelectLinkedTaskMail=Sélectionner tâches ou messages liés
+menuSelectLinkedTask=Sélectionner tâches liées
+menuSelectLinkedMail=Sélectionner messages liés
+menuGoNextTaskMail=Aller à la tâche ou message suivant
+menuGoNextTask=Aller à la tâche suivante
+menuGoNextMail=Aller au message suivant
+reportState=Etat
+reportPriority=Priorité
+docUrl=http://tasksandmails.mozdev.org/manuel_fr.html
